# nastran-aeroelasticity

./: .coverage  .gitignore  AeroelasticAnalysis.py  AeroelasticPanels.py  AeroelasticPostProcessing.py  LICENSE  Makefile  README.md  aero5mesh.py  analysis.yml  femap.py  panel_flutter.py  pyproject.toml  readOP2.py  requirements.txt  run_analysis.py  setup.cfg  setup.py  spcs_analysis.py  test_main.py  thermo_analysis.py
.github/workflows/: main.yml  tagging.yml
aero/: AeroelasticAnalysis.py  AeroelasticPanels.py  AeroelasticPostProcessing.py
docs/: cite-us.md
femap/: PyFemap.py  femap.py
nastran/: analysis.py  utils.py
nastran/aero/: panels.py  post.py  superpanels.py
nastran/aero/analysis/: flutter.py  panel_flutter.py
nastran/geometry/: panels.py
nastran/post/: common.py  f06.py  flutter.py  modal.py  plots.py
nastran/structures/: composite.py  panel.py
nastran/thermo/analysis/: steady_state.py
notebooks/: Composite.ipynb  CompositeThermo.ipynb  Metallic.ipynb  MetallicNoThermo.ipynb  MetallicThermo.ipynb  Modal.ipynb
src/nastran/: analysis.py
src/nastran/aero/analysis/: flutter.py  panel_flutter.py
src/nastran/post/: common.py  f06.py  flutter.py  plots.py
src/nastran/post/f06/: __init__.py  eigval.py  f06.py  flutter.py  modal.py
src/nastran/statics/: buckling.py
src/nastran/structures/: bc.py  composite.py  material.py  panel.py
tests/: test_main.py  test_post.py
tests/files/: flutter-f06-result.txt
