[metadata]
name = nastran-aero-flutter
version = 0.0.1
author = Victor Santos
author_email = victorsantos@ufmg.br
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zuckberj/nastran-aero-flutter
project_urls =
    Bug Tracker = https://github.com/zuckberj/nastran-aero-flutter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src