[metadata]
name = nastran-aeroelasticity
version = 0.2.1
author = Victor Santos
author_email = victorsantos@ufmg.br
description = Some usefull routines for aeroelastic analysis with NASTRAN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zuckberj/nastran-aero-flutter
project_urls =
    Bug Tracker = https://github.com/zuckberj/nastran-aero-flutter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
  matplotlib>=3.1.3
  numpy>=1.18.1
  pyNastran>=1.3.2
  pandas>=1.3

[options.packages.find]
where = src

[flake8]
select =
    # pycodestyle
    E112,E113,E9,W6,
    # pyflakes
    F402,F404,F406,F407,F5,F6,F7,F821,F823,F831
ignore =
    # pycodestyle
    E722,W605,
    # pyflakes
    F504,F522,F523,F541,F705
